--- a/client/src/components/Chat/styles.css
+++ b/client/src/components/Chat/styles.css
@@ -16,11 +16,77 @@
     padding-left: 20px;
 }
 
-.chat__headerInfo h3{
-  margin-bottom: 3px;
-  font-weight: 500;
+.chat__headerInfo h3 {
+    margin-bottom: 3px;
+    font-weight: 500;
 }
 
 .chat__headerInfo p {
-  color: gray;
+    color: gray;
+}
+
+.chat__body {
+    flex: 1;
+    background-color: #9cc2ca;
+    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    padding: 30px;
+    overflow: scroll;
+}
+
+.chat__message {
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin-bottom: 30px;
+}
+
+.chat__reciever {
+    margin-left: auto;
+    background: rgb(210, 245, 170);
+    
+}
+
+.chat__timestamp {
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.chat__name {
+  position: absolute;
+  top: -15px;
+  font-weight: 800;
+  font-size: xx-small;
+}
+
+.chat__footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 62px;
+    border-bottom: 1px solid lightgreen;
+}
+
+.chat__footer form {
+    flex: 1;
+    display: flex;
+}
+
+.chat__footer form input {
+    flex: 1;
+    border-radius: 30px;
+    padding: none;
+    border: none;
+    outline-width: 0;
+}
+
+.chat__footer form button {
+    display: none;
+}
+
+.chat__footer .MuiSvgIcon-root {
+    padding: 10px;
+    color: gray;
 }
