--- a/client/src/components/Sidebar/styles.css
+++ b/client/src/components/Sidebar/styles.css
@@ -45,16 +45,31 @@
     padding: 10px;
 }
 
+.sidebar__searchContainer button {
+    margin-left: auto;
+    padding: 0;
+}
+
 .sidebar__searchContainer input {
     border: none;
     outline-width: 0;
     margin-left: 0;
 }
 
+
 .sidebar__chats {
   flex: 1;
   background-color: white;
   overflow: scroll;
+  overflow-x: hidden;
+}
+
+.sidebar__spinner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
 }
 
 .sidebarChat {
@@ -76,4 +91,9 @@
 
 .sidebarChat__info {
     margin-left: 15px
+}
+
+.sidebar__noRooms {
+    padding: 5px;
+    text-align: center;
 }
