--- a/client/src/components/Chat/styles.css
+++ b/client/src/components/Chat/styles.css
@@ -1,11 +1,13 @@
 .chat {
     display: flex;
     flex-direction: column;
-    flex: .65;
+    flex: 1;
+    z-index: 2;
 }
 
 .chat__header {
     padding: 20px;
+    max-width: 100%;
     display: flex;
     align-items: center;
     border-bottom: 1px solid lightgray;
@@ -14,6 +16,10 @@
 .chat__headerInfo {
     flex: 1;
     padding-left: 20px;
+}
+
+.chat__header p {
+    overflow: hidden;
 }
 
 .chat__headerInfo h3 {
@@ -38,25 +44,36 @@
     font-size: 16px;
     padding: 10px;
     width: fit-content;
+    max-width: 75%;
     border-radius: 10px;
     background-color: #ffffff;
-    margin-bottom: 30px;
+    margin: 5px 0 30px 0;
+}
+
+.chat__message p {
+    display: flex;
+    overflow: hidden;
 }
 
 .chat__reciever {
     margin-left: auto;
     background: rgb(210, 245, 170);
-    
+    text-align: right;
 }
 
 .chat__timestamp {
-    margin-left: 10px;
+    position: absolute;
     font-size: xx-small;
+    width: 110px;
+    bottom: -12px;
+    margin-left: 5px;
 }
 
 .chat__name {
   position: absolute;
-  top: -15px;
+  top: -12px;
+  left: 0;
+  margin-left: 5px;
   font-weight: 800;
   font-size: xx-small;
 }
@@ -67,6 +84,7 @@
     align-items: center;
     height: 62px;
     border-bottom: 1px solid lightgreen;
+    z-index: 2;
 }
 
 .chat__footer form {
@@ -90,3 +108,35 @@
     padding: 10px;
     color: gray;
 }
+
+/* @media only screen and (max-width: 960px) {
+    .chat {
+        animation: slide-out 0.3s linear 0.4s both;
+    }
+}
+
+@media only screen and (min-width: 960px) {
+    .chat {
+        animation: slide-in 0.3s linear 0.4s both;
+    }
+}
+
+@keyframes slide-out {
+    from {
+        transform: translateX(0);
+        flex: 0.65
+    }
+    to {
+        transform: translateX(-100%);
+        flex: 1
+    }
+}
+
+@keyframes slide-in {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+} */
