--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -31,7 +31,7 @@
 
 .modal {
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     height: 100%;
     width: 100%;
     display: flex;
@@ -90,5 +90,13 @@
     }
     to {
         opacity: 1
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .app-body {
+        height: 100vh;
+        width: 100vw;
+        margin-top: 0;
     }
 }
