--- a/client/src/components/Chat/styles.css
+++ b/client/src/components/Chat/styles.css
@@ -39,12 +39,29 @@
     overflow: scroll;
 }
 
+.message__container {
+    position: relative;
+    width: fit-content;
+    max-width: 75%;
+}
+
+.message__container img {
+    max-height: 150px;
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.user_chat {
+    margin-left: auto;
+}
+
+/* OLD CSS */
+
 .chat__message {
     position: relative;
     font-size: 16px;
     padding: 10px;
     width: fit-content;
-    max-width: 75%;
     border-radius: 10px;
     background: #ffffff;
     margin: 5px 0 30px 0;
@@ -55,12 +72,8 @@
     max-width: 100%;
 }
 
-.chat__message p {
-    display: flex;
-    overflow: hidden;
-}
-
 .chat__reciever {
+    margin-top: 0px;
     margin-left: auto; 
     background: rgb(210, 245, 170);
     text-align: right;
@@ -74,9 +87,9 @@
 .chat__timestamp {
     position: absolute;
     font-size: xx-small;
-    width: 110px;
+    width: max-content;
     bottom: -12px;
-    margin-left: 5px;
+    margin: 0 5px;
 }
 
 .chat__name {
