--- a/client/src/components/Chat/styles.css
+++ b/client/src/components/Chat/styles.css
@@ -55,6 +55,15 @@
     margin-left: auto;
 }
 
+.no_message {
+    margin-bottom: 25px;
+}
+
+.push-imageRight {
+    margin-left: 100%;
+    transform: translateX(-100%);
+}
+
 /* OLD CSS */
 
 .chat__message {
@@ -64,7 +73,7 @@
     width: fit-content;
     border-radius: 10px;
     background: #ffffff;
-    margin: 5px 0 30px 0;
+    margin: 0 0 30px 0;
 }
 
 .chat__message img {
@@ -74,7 +83,7 @@
 
 .chat__reciever {
     margin-top: 0px;
-    margin-left: auto; 
+    margin-left: auto;
     background: rgb(210, 245, 170);
     text-align: right;
 }
@@ -184,8 +193,8 @@
 }
 
 .footer__ImageContainer {
-  display: flex;
-  justify-content: space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .footer__ImageContainer img {
