--- a/client/src/components/Chat/styles.css
+++ b/client/src/components/Chat/styles.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     flex: 1;
     z-index: 2;
-    
 }
 
 .chat__header {
@@ -32,7 +31,6 @@
     color: gray;
 }
 
-
 .chat__body {
     flex: 1;
     height: 100%;
@@ -54,9 +52,18 @@
 }
 
 .message__container img {
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.message__container .small {
     max-height: 150px;
     max-width: 100%;
-    border-radius: 10px;
+}
+
+.message__container .expand {
+    max-width: 100%;
+    height: auto;
 }
 
 .user_chat {
@@ -216,10 +223,10 @@
 }
 
 .previewImgContainer svg {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    cursor: pointer;
 }
 
 @keyframes expand-emojis {
@@ -239,6 +246,7 @@
         height: 0px;
     }
 }
+
 
 /* @media only screen and (max-width: 960px) {
     .chat {
